[package]
name = "concurrency_manager"
version = "0.0.1"
edition = "2018"
publish = false

[dependencies]
async-mutex = "1.1.5"
async-trait = "0.1.36"
kvproto = { git = "https://github.com/pingcap/kvproto.git", default-features = false }
thiserror = "1.0"
txn_types = { path = "../txn_types" }

[dev-dependencies]
tokio = { version = "0.2", features = ["rt-threaded", "time", "sync", "macros"] }